# usgplate

./: .gitignore  LICENSE.md  README.md  TODO.md  main.py  pyproject.toml  requirements.txt  settings.json
assets/: base_ultrasound_template.odt
tests/data/: sample_report.odt  ultrasound.dcm  ultrasound_grayscale.dcm
tests/helpers/: create_sample_dicom.py  image_to_dicom.py
tests/integration/: test_report_write.py
tests/usgplate/: test_odt_report.py
tests/usgplate/dicom/: test_dcm_image.py
tests/usgplate/pixmap/: test_pixmap.py
tests/usgplate/utils/: test_worker.py
usgplate/dicom/: image.py
usgplate/dicom/entities/: dicom_instance_info.py
usgplate/dicom/networking/: storescp_server.py
usgplate/dicom/repository/: __init__.py  dcm_file_repository.py  dcm_repository.py
usgplate/dicom/runners/: storescp_runner.py
usgplate/pixmap/: annotated_pixmap_model.py  pixmap.py
usgplate/reports/: odt_image_report.py
usgplate/services/: odt_report_generator.py
usgplate/services/image_providers/: dir_dir_scanner.py  image_dir_scanner.py  image_provider_manager.py  scp_store_process_manager.py  study_image_provider.py
usgplate/settings/: settings.py
usgplate/study/: study.py
usgplate/ui/modals/: auto_new_study_modal.py  choose_directory_modal.py  settings_modal.py
usgplate/ui/widgets/: image_grid.py  sized_image_grid.py  study_form.py
usgplate/ui/widgets/subsettings/: dicom.py  dirdir.py
usgplate/utils/: default_app_open.py  image_info.py  worker.py
